--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ body {
     overflow: hidden;
 }
 
-button#colorSwitch {
+button#colorSwitch,
+button#backgroundSwitch {
     position: absolute;
     top: 20px;
-    left: 20px;
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
@@ -22,6 +22,14 @@ button#colorSwitch {
     cursor: pointer;
 }
 
-button#colorSwitch:hover {
+button#colorSwitch {
+    left: 20px;
+}
+
+button#backgroundSwitch {
+    left: 160px;
+}
+
+button:hover {
     background-color: #555;
 }
